--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
   },
   "homepage": "https://github.com/digitalbazaar/bedrock-vc-issuer-coordinator-storage",
   "dependencies": {
+    "@digitalbazaar/ed25519-signature-2020": "^5.4.0",
+    "@digitalbazaar/ezcap": "^4.1.0",
     "@digitalbazaar/lru-memoize": "^3.0.2",
     "assert-plus": "^1.0.0",
     "base64url-universal": "^2.0.0",
     "canonicalize": "^2.0.0"
   },
   "peerDependencies": {
+    "@bedrock/app-identity": "4.0.0",
     "@bedrock/core": "^6.0.1",
+    "@bedrock/https-agent": "^4.1.0",
     "@bedrock/mongodb": "^10.0.0"
   },
   "devDependencies": {
