--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@digitalbazaar/ezcap": "^4.1.0",
     "@digitalbazaar/lru-memoize": "^3.0.2",
     "assert-plus": "^1.0.0",
-    "base64url-universal": "^2.0.0",
     "canonicalize": "^2.0.0",
+    "jose": "^6.0.6",
     "p-queue": "^8.1.0"
   },
   "peerDependencies": {
