--- a/package.json
+++ b/package.json
@@ -29,22 +29,21 @@
     "@digitalbazaar/ezcap": "^4.1.0",
     "@digitalbazaar/lru-memoize": "^3.0.2",
     "assert-plus": "^1.0.0",
-    "canonicalize": "^2.0.0",
-    "jose": "^6.0.6",
+    "canonicalize": "^2.1.0",
+    "jose": "^6.0.10",
     "p-queue": "^8.1.0"
   },
   "peerDependencies": {
     "@bedrock/app-identity": "4.0.0",
-    "@bedrock/core": "^6.0.1",
+    "@bedrock/core": "^6.3.0",
     "@bedrock/https-agent": "^4.1.0",
-    "@bedrock/mongodb": "^10.0.0"
+    "@bedrock/mongodb": "^11.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.47.0",
+    "eslint": "^8.57.1",
     "eslint-config-digitalbazaar": "^5.0.1",
-    "eslint-plugin-jsdoc": "^46.5.0",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "jsdoc-to-markdown": "^8.0.0"
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-unicorn": "^56.0.1"
   },
   "directories": {
     "lib": "./lib"
