--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "p-queue": "^8.1.0"
   },
   "peerDependencies": {
-    "@bedrock/app-identity": "4.0.0",
+    "@bedrock/app-identity": "^4.0.0",
     "@bedrock/core": "^6.3.0",
     "@bedrock/https-agent": "^4.1.0",
     "@bedrock/mongodb": "^11.0.0"
